--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Justin Smith <smithjustinn@hotmail.com>"]
 edition = "2018"
 
 [dependencies]
+bincode = "1.1.2"
 byteorder = "1.3.1"
 crc = "1.8.1"
 serde = "1.0.89"
@@ -17,3 +18,7 @@ path = "src/lib.rs"
 [[bin]]
 name = "akv_mem"
 path = "src/akv_mem.rs"
+
+[[bin]]
+name = "akv_disk"
+path = "src/akv_disk.rs"
